      Autoconf: fix buggy tests for ether_ntohost().
      Makefile.in: Do not install a version-suffixed tcpdump binary if the
        .devel file does not exists.
      tests: On HP-UX use "diff -c" by default.
      autogen.sh: Allow to configure Autoconf warnings.
      autogen.sh: Delete all trailing blank lines at end of configure.
      Reimplement the tests similarly to libpcap.
    Documentation:
      man: Clarify the "any" pseudo-interface further.

DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
  Summary for 4.99.6 tcpdump release (so far!)
    Refine protocol decoding for:
      DNS: Use ND_TCHECK_LEN() instead of a custom bounds check.
      IPv6: Add a missing comma and remove a colon in the output.
      TCP: Note if the Urgent Pointer is non-zero while URG flag not set,
           if the verbose level is > 1 (option -vv and more).
      TCP: Note if the Acknowledgment Number is non-zero while ACK flag not set,
           if the verbose level is > 1 (option -vv and more).
      TCP: Fix Reset segment processing.
      IP, IPv6: Fix setting the snapshot length for the payload.
      IP: Use ND_TTEST_LEN() instead of a custom bounds check.
      frag6: Add a bounds check in non-verbose mode.
      PTP: Remove spaces before colons in output.
      PTP: Fix management packet fields.
      ISO: Avoid undefined behavior and integer overflow in the fletcher
           checksum calculation.
      NFS: Delete dead code.
      BOOTP: Use an uint16_t variable to get the result of a GET_BE_U_2().
      ZEP: use the exissting NTP time formatting code.
      NTP: Fix p_ntp_time_fmt() using epoch 1/epoch 2 convention (RFC 4330).
      NTP: Update a field name with the RFC 5905 name (Origin Timestamp).
    User interface:
      Add optional unit suffix on -C file size.
      Improve the handling of size suffixes for -C.
      Warn that options -A, -x[x] and -X[X] are mutually exclusive.
      For PCAP_ERROR_CAPTURE_NOTSUP, show the error message provided